# hwloc

./: .gitignore  Makefile.am
config/: hwloc_internal.m4  netloc.m4
doc/: Makefile.am  doxygen-config.cfg.in  netloc.doxy
include/: Makefile.am  netloc.h  netloc.h.in  netlocscotch.h
include/private/: netloc.h
include/private/utils/: netloc.h
netloc/: Makefile.am  architecture.c  datatypes.c  hwloc.c  metrics.c  scotch.c  todos.txt  tree.c
tests/netloc/: Makefile.am  tests.sh.in
utils/netloc/export/draw/: Makefile.am
utils/netloc/hardware/explicit/: netloc_explicit_find_hosts.c
utils/netloc/hardware/infiniband/: Makefile.am  netloc_ib_extract_dats.c
utils/netloc/hardware/opa/: Makefile.am  netloc_opa_parse_snapshot.c
utils/netloc/mpi/: netloc_mpi_rank_file.c
utils/netloc/topology/: architecture.c  tree.c
