# Copyright © 2017-2018 Inria.  All rights reserved.
#
# See COPYING in top-level directory.
#
# $HEADER$
#
AM_CPPFLAGS = \
        -I$(top_builddir)/include \
        -I$(top_srcdir)/include

bin_PROGRAMS = \
        netloc_opa_parse_snapshot

netloc_opa_parse_snapshot_SOURCES = \
        netloc_opa_parse_snapshot.c

netloc_opa_parse_snapshot_LDADD = \
	$(top_builddir)/netloc/libnetloc.la
